--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   ],
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-minified": "~0.10.0"
+    "grunt-contrib-cssmin": "~0.12.3",
+    "grunt-contrib-uglify": "~0.9.1",
+    "grunt-contrib-concat": "~0.5.1"
   }
 }
