--- a/.htaccess
+++ b/.htaccess
@@ -23,3 +23,72 @@ RewriteRule ^domains/[^/]+/(.+[^/])$ /$1/ [R]
 # subdomeny - spravne presmerovani pri chybejicim /
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^subdom/[^/]+/(.+[^/])$ /$1/ [R]
+
+# BEGIN Compress text files
+<ifModule mod_deflate.c>
+AddOutputFilterByType DEFLATE \
+ text/html \
+ text/xml \
+ text/css \
+ text/plain \
+ image/svg+xml \
+ application/xhtml+xml \
+ application/xml \
+ application/rdf+xml \
+ application/rss+xml \
+ application/atom+xml \
+ text/javascript \
+ text/ecmascript \
+ application/javascript \
+ application/x-javascript \
+ application/ecmascript \
+ application/json \
+ application/x-font-ttf \
+ application/x-font-otf \
+ font/truetype \
+ font/opentype \
+ application/x-pointplus
+</ifModule>
+# END Compress text files
+
+# BEGIN Expire headers
+<ifModule mod_expires.c>
+ExpiresActive On
+ExpiresDefault "access plus 2592000 seconds"
+ExpiresByType image/x-icon "access plus 2592000 seconds"
+ExpiresByType image/jpeg "access plus 2592000 seconds"
+ExpiresByType image/jpg "access plus 2592000 seconds"
+ExpiresByType image/png "access plus 2592000 seconds"
+ExpiresByType image/gif "access plus 2592000 seconds"
+ExpiresByType application/x-shockwave-flash "access plus 2592000 seconds"
+ExpiresByType text/css "access plus 604800 seconds"
+ExpiresByType text/javascript "access plus 604800 seconds"
+ExpiresByType application/javascript "access plus 604800 seconds"
+ExpiresByType application/x-javascript "access plus 604800 seconds"
+ExpiresByType text/html "access plus 604800 seconds"
+ExpiresByType application/xhtml+xml "access plus 604800 seconds"
+</ifModule>
+# END Expire headers
+
+# BEGIN Cache-Control Headers
+<ifModule mod_headers.c>
+<filesMatch "\.(ico|jpe?g|png|gif|swf)$">
+Header set Cache-Control "public"
+</filesMatch>
+<filesMatch "\.(css)$">
+Header set Cache-Control "public"
+</filesMatch>
+<filesMatch "\.(js)$">
+Header set Cache-Control "private"
+</filesMatch>
+<filesMatch "\.(x?html?|php)$">
+Header set Cache-Control "private, max-age=360, must-revalidate"
+</filesMatch>
+</ifModule>
+# END Cache-Control Headers
+
+# BEGIN Turn ETags Off
+Header unset Pragma
+FileETag None
+Header unset ETag
+# END Turn ETags Off
