--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "http://ldrahnik.com",
   "repository": {
     "type": "git",
-    "url": "git://github.com/ldrahnik/ldrahnik.com.git"
+    "url": "git://github.com/ldrahnik/ldrahnik.git"
   },
   "authors": [
     {
