--- a/.htaccess
+++ b/.htaccess
@@ -92,3 +92,10 @@ Header unset Pragma
 FileETag None
 Header unset ETag
 # END Turn ETags Off
+
+# BEGIN Security Headers
+Header set X-Content-Type-Options "nosniff"
+Header set X-Frame-Options "SAMEORIGIN"
+Header set X-XSS-Protection "1; mode=block"
+Header set Content-Security-Policy "default-src 'none'; img-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src https://api.github.com;"
+# END Security Headers
