--- a/.htaccess
+++ b/.htaccess
@@ -94,6 +94,7 @@ Header unset ETag
 # END Turn ETags Off
 
 # BEGIN Security Headers
+Header set Referrer-Policy: strict-origin-when-cross-origin
 Header set X-Content-Type-Options "nosniff"
 Header set X-Frame-Options "SAMEORIGIN"
 Header set X-XSS-Protection "1; mode=block"
