--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     }
   ],
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-cssmin": "~0.12.3",
-    "grunt-contrib-uglify": "~0.9.1",
-    "grunt-contrib-concat": "~0.5.1"
+    "grunt-contrib-uglify": "~0.9.1"
   }
 }
